Add Sign In Button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </nav>
     <button type="button" class="btn-menu"><span>Menu</span></button>
     <a class="home-button" href="/register.html">Giddy Up!</a>
+	<a class="home-button" href="/signin.html">Sign In!</a>
   </header>
 
   <section class="home-about">
